[tool.poetry]
name = "gerald-tools"
version = "0.1.0"
description = "Tools for importings the GERALD Dataset"
authors = ["Philipp Simon Leibner <philipp.leibner@ifs.rwth-aachen.de>"]
license = "Apache-2.0"

classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research"
]

keywords = ["dataset", "signalling", "computer vision", "machine learning"]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7, <3.10"
aenum = "^3.1.0"
numpy = "^1.21.2"
tqdm = "^4.62.2"
ImageHash = "^4.2.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
opencv-python = "^4.5.3"
pytest = "^6.2.4"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
